--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "protfolio-faruch-i",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.x",
+    "npm": "6.x"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -9,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
+    "react-typical": "^0.1.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
