--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-scripts": "^4.0.3",
     "react-typical": "^0.1.3",
     "web-vitals": "^1.1.2"
