--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
     "react-scripts": "^4.0.3",
+    "react-scroll-into-view": "^1.12.0",
     "react-typical": "^0.1.3",
     "web-vitals": "^1.1.2"
   },
