--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "^4.0.3",
     "react-scroll-into-view": "^1.12.0",
     "react-typical": "^0.1.3",
+    "react-use": "^17.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
